--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Intoto
+          <h1 class="mb-0">集大成Intoto
             <span class="text-primary">battery manufactor</span>
           </h1>
           <div class="subheading mb-5">新北市三重區光復路二段 · (02) 85121763 ·
