--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">集大成Intoto
+          <h1 class="mb-0">Intoto
             <span class="text-primary">battery manufactor</span>
           </h1>
-          <div class="subheading mb-5">新北市三重區光復路二段 · (02) 85121763 ·
-            <a href="mailto:name@email.com">intoto2@hinet32.com</a>
+          <div class="subheading mb-5">集大成企業有限公司
+           
+          </div>
+          <div class="subheading mb-5">新北市三重區光復路一段138號2樓 · (02) 85121763 ·
+            <a href="mailto:name@email.com">intoto2@ms32.hinet.net</a>
           </div>
           <p class="mb-5">電池，一般狹義上的定義是將本身儲存的化學能轉成電能的裝置，廣義的定義為將預先儲存起的能量轉化為可供外用電能的裝置。因此，像太陽能電池只有轉化而無儲存功能的裝置不算是電池。其他名稱有電瓶、電芯，而中文池及瓶也有儲存作用之意。</p>
           <ul class="list-inline list-social-icons mb-0">
